<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fourth"
        android:elevation="20dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@drawable/ripple_effect_vector_icon"/>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_centerVertical="true"
            android:fontFamily="@font/baloo"
            android:layout_toEndOf="@id/btn_back"
            android:layout_marginStart="10dp"
            android:text="@string/signup"
            android:elegantTextHeight="true"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <ImageView
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ripple_effect_vector_info"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/default_profile_pic"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="0dp"
                    android:layout_gravity="center"
                    android:text="@string/signup_info"
                    android:fontFamily="@font/grotesque"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Fullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:endIconTint="@color/delete"
                app:startIconDrawable="@drawable/ic_baseline_person_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:helperText="* Required"
                app:helperTextTextColor="@color/delete"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:endIconTint="@color/delete"
                app:startIconDrawable="@drawable/ic_baseline_person_pin_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="30"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:helperText="* Required"
                app:helperTextTextColor="@color/delete"
                app:endIconMode="clear_text"
                app:endIconTint="@color/delete"
                app:startIconDrawable="@drawable/ic_baseline_email_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:helperText="* Required"
                app:helperTextTextColor="@color/delete"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/orangeSoft"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Phone Number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:endIconMode="custom"
                app:endIconTint="@color/helper_success"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:prefixText="+62"
                app:prefixTextColor="@color/purple_500">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Gender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:endIconMode="clear_text"
                app:endIconTint="@color/delete"
                app:startIconDrawable="@drawable/ic_baseline_sentiment_very_satisfied_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="11" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:endIconMode="clear_text"
                app:endIconTint="@color/delete"
                app:startIconDrawable="@drawable/ic_baseline_home_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutInputBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Birthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_layout_color"
                app:hintTextColor="@color/orangeSoft"
                app:endIconMode="clear_text"
                app:endIconTint="@color/delete"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:background="@drawable/round_bg"
                app:backgroundTint="@null"
                android:backgroundTint="@color/fourth"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>